--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "2e644a3d-b91c-497c-9636-4a14e167f4c0",
   "name": "SD Seminar",
   "publisher": "RT",
-  "brief": "",
+  "brief": "Brief example text",
   "description": "",
   "version": "1.0.0.0",
   "privacyStatement": "",
